[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleMesh" id=1]
material = SubResource( 3 )
radius = 0.5
mid_height = 1.5

[sub_resource type="CapsuleShape" id=2]
radius = 0.5
height = 1.5

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.2
bottom_radius = 0.3
height = 0.2

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.358249, 0.334291, 0.635372 )

[node name="enemy" type="KinematicBody"]
collision_layer = 2
collision_mask = 24
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.25272, 0 )
layers = 2
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.25342, 0 )
shape = SubResource( 2 )

[node name="face" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0208181, 1.8872, -0.523509 )
layers = 2
mesh = SubResource( 4 )

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 8

[node name="vision" type="CollisionPolygon" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.00435138, 1.89541, -0.459616 )
polygon = PoolVector2Array( -6.45332, -17.7681, 6.453, -17.768, 1, 0, -1, 0 )

[node name="followTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="Area2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4174, -0.668235 )
collision_layer = 2
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.323057 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="followTimer" to="." method="_on_followTimer_timeout"]
[connection signal="body_entered" from="Area2" to="." method="_on_Area2_body_entered"]
